--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "@angular/router": "^15.0.0",
     "@capacitor/android": "4.5.0",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.5.0",
+    "@capacitor/device": "^4.1.0",
+    "@capacitor/filesystem": "^4.1.4",
+    "@capacitor/geolocation": "^4.1.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
+    "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage-angular": "^3.0.6",
     "animate.css": "^4.1.1",
+    "image-resize-compress": "^1.1.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
