--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/geolocation": "^4.1.0",
     "@capacitor/google-maps": "^4.3.2",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.5.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.0",
@@ -36,6 +37,7 @@
     "animate.css": "^4.1.1",
     "image-resize-compress": "^1.1.0",
     "ionicons": "^6.0.3",
+    "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
