--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "animate.css": "^4.1.1",
     "image-resize-compress": "^1.1.0",
     "ionicons": "^6.0.3",
+    "libphonenumber-js": "^1.10.15",
     "ng-lazyload-image": "^9.1.3",
+    "ng-otp-input": "^1.8.5",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
