--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@awesome-cordova-plugins/social-sharing": "^6.3.0",
     "@capacitor/android": "4.6.1",
     "@capacitor/app": "4.1.1",
+    "@capacitor/browser": "^4.1.0",
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "^4.5.0",
     "@capacitor/device": "^4.1.0",
