--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "@awesome-cordova-plugins/clipboard": "^6.3.0",
     "@awesome-cordova-plugins/social-sharing": "^6.3.0",
+    "@capacitor-community/fcm": "^3.0.2",
     "@capacitor/android": "4.6.1",
     "@capacitor/app": "4.1.1",
     "@capacitor/browser": "^4.1.0",
@@ -33,18 +34,21 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "4.5.0",
     "@capacitor/keyboard": "4.1.0",
+    "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/share": "^4.1.0",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
     "@techiediaries/ngx-qrcode": "^9.1.0",
+    "@types/howler": "^2.2.7",
     "animate.css": "^4.1.1",
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "es6-promise-plugin": "^4.2.2",
+    "howler": "^2.2.3",
     "html-to-image": "^1.11.4",
     "image-resize-compress": "^1.1.0",
     "ionicons": "^6.0.3",
