--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>عقارك</string>
+        <string>عقارات بغداد</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -54,8 +54,8 @@
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>$PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION</string>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>$PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
+    <string>we need access your Library to take a photo to your profile picture</string>
     <key>NSCameraUsageDescription</key>
-    <string>$PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
+    <string>we need access your camera to take a photo to your profile picture</string>
 </dict>
 </plist>
