--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation project(':capacitor-share')
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
+    implementation project(':pantrist-capacitor-firebase-dynamic-links')
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
 
