--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -43,3 +43,6 @@ project(':capacitor-splash-screen').projectDir = new File('../node_modules/@capa
 
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
+
+include ':pantrist-capacitor-firebase-dynamic-links'
+project(':pantrist-capacitor-firebase-dynamic-links').projectDir = new File('../node_modules/@pantrist/capacitor-firebase-dynamic-links/android')
