--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
+    "@pantrist/capacitor-firebase-dynamic-links": "^4.1.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@types/howler": "^2.2.7",
     "animate.css": "^4.1.1",
@@ -70,7 +71,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.5.0",
+    "@capacitor/cli": "^4.8.1",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.0.0",
